14-aug/network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: adminer
  egress:
  - to:
     - podSelector:
         matchLabels:
           app: my-app
